# vibe-coding-synapsestocks

./: .gitignore  ARCHITECTURE.md  AboutMe  Literature  NEUROSAN_INTEGRATION.md  README.md  package-lock.json
ns/: .flake8  .pylintrc  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt  setup.py
ns/build_scripts/: build.sh  copyright_config.json  integration-tests.yml  run.sh  run_markdownlint.sh  run_pylint.sh  server_start.sh  source_available_copyright.txt
ns/docs/: agent_hocon_reference.md  clients.md  llm_info_hocon_reference.md  manifest_hocon_reference.md  test_case_hocon_reference.md  tests.md  toolbox_info_hocon_reference.md
ns/neuro_san/client/: agent_cli.py  agent_session_factory.py  direct_agent_session_factory.py  simple_one_shot.py  streaming_input_processor.py  thinking_file_message_processor.py
ns/neuro_san/coded_tools/: google_serper.py  rag.py  web_search.py
ns/neuro_san/deploy/: Dockerfile  build.sh  run.sh
ns/neuro_san/interfaces/: agent_session.py  agent_session_constants.py  async_agent_session.py  coded_tool.py  concierge_session.py  usage_logger.py
ns/neuro_san/internals/: README.md
ns/neuro_san/message_processing/: answer_message_processor.py  basic_message_processor.py  chat_context_message_processor.py  composite_message_processor.py  message_processor.py  structure_message_processor.py
ns/neuro_san/registries/: assess_failure.hocon  bing_search.hocon  date_time.hocon  esp_decision_assistant.hocon  gist.hocon  google_serper.hocon  hello_world.hocon  intranet_agents.hocon  manifest.hocon  math_guy.hocon  math_guy_passthrough.hocon  music_nerd.hocon  music_nerd_pro.hocon  music_nerd_pro_llm_anthropic.hocon  music_nerd_pro_llm_azure.hocon  music_nerd_pro_llm_gemini.hocon  stock_evaluator.hocon  website_rag.hocon  website_search.hocon  website_search_usage_example.hocon
ns/neuro_san/service/: agent_main_loop.py
ns/neuro_san/session/: abstract_http_service_agent_session.py  agent_service_stub.py  async_direct_agent_session.py  async_grpc_service_agent_session.py  async_http_service_agent_session.py  async_service_agent_session.py  direct_agent_session.py  direct_concierge_session.py  (+7 more)
ns/tests/: conftest.py
(+228 files in other folders)
